# libiconv

./: CMakeLists.txt  android_ci_build.bash  config.h.cmake.in
.github/workflows/: build.yml
cmake/: genaliases.cmake  gperf-static.cmake
lib/: genflags.c
libcharset/lib/: localcharset.c
